fix icon display on mobiles

--- a/source/scss/layouts/_nav.scss
+++ b/source/scss/layouts/_nav.scss
@@ -91,7 +91,7 @@
         .dropdown {
             &::before {
                 content: "";
-                background: url(/img/angle-right.svg);
+                background: url(../img/angle-right.svg);
                 background-size: cover;
                 color: #575656;
                 height:20px;
